--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ http://www.tooplate.com/view/2110-character
                         <input type="text" id="contact_name" name="contact_name" class="form-control" placeholder="Name" required/>
                     </div>
                     <div class="tm-form-group">
-                        <input type="email" id="contact_email" name="contact_email" class="form-control" placeholder="Email" required/>
+                        <input type="email" id="clement.faure-gignoux@edu.univ-fcomte.fr" name="contact_email" class="form-control" placeholder="Email" required/>
                     </div>
                     <div class="tm-form-group">
                         <textarea rows="5" id="contact_message" name="contact_message" class="form-control" placeholder="Message" required></textarea>
