--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ http://www.tooplate.com/view/2110-character
         <div class="tm-footer" id="tmFooter" data-desktop-seq-no="5" data-mobile-seq-no="9">
             <img src="img/qr-link-tooplate.png" alt="QR Code" class="tm-img-qr">
             <div>
-                <p class="tm-mb-small">Copyright &copy; 2018 Company Name</p>
-                <p>Designed by <a rel="nofollow" href="https://www.facebook.com/tooplate">Tooplate</a></p>
+                <p class="tm-mb-small">Copyright &copy; 2021 Clément FAURE-GIGNOUX</p>
+                <p>Designed by <a rel="nofollow" href="https://www.facebook.com/tooplate">Clément FAURE-GIGNOUX</a></p>
             </div>
         </div>
         <div class="item" data-desktop-seq-no="6" data-mobile-seq-no="2">
@@ -99,10 +99,9 @@ http://www.tooplate.com/view/2110-character
             <div class="tm-form-section-tag">
                 <div class="tm-bg-secondary tm-text-white tm-block-pad tm-form-section-tag-inner">
                     <header>
-                        <h2>Proin imperdiet commodo nisi</h2>
+                        <h2>header en bas</h2>
                     </header>
-                    <p>Mauris sodales vulputate ante a dapibus Donec vitae maximus dolor, pharetra imperdiet lectus. Praesent
-                        pharetra elit ac est congue volutpat.</p>
+                    <p>La fin.</p>
                 </div>
             </div>
         </div>
