--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ http://www.tooplate.com/view/2110-character
             <img src="img/qr-link-tooplate.png" alt="QR Code" class="tm-img-qr">
             <div>
                 <p class="tm-mb-small">Copyright &copy; 2021 Clément FAURE-GIGNOUX</p>
-                <p>Designed by <a rel="nofollow" href="https://www.facebook.com/tooplate">Clément FAURE-GIGNOUX</a></p>
+                <p>Designed by <a rel="nofollow" href="https://www.github.com/cfauregi">Clément FAURE-GIGNOUX</a></p>
             </div>
         </div>
         <div class="item" data-desktop-seq-no="6" data-mobile-seq-no="2">
@@ -85,7 +85,7 @@ http://www.tooplate.com/view/2110-character
                         <input type="text" id="contact_name" name="contact_name" class="form-control" placeholder="Name" required/>
                     </div>
                     <div class="tm-form-group">
-                       <input type="email" id="contact_email" name="contact_email" class="form-control" placeholder="clement.faure-gignoux@edu.univ-fcomte.fr" required/>
+                       <input type="email" id="contact_email" name="contact_email" class="form-control" placeholder="Mail" required/>
                     </div>
                     <div class="tm-form-group">
                         <textarea rows="5" id="contact_message" name="contact_message" class="form-control" placeholder="Message" required></textarea>
