--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ http://www.tooplate.com/view/2110-character
                     </div>
                     <div class="tm-text-right">
                         <button type="submit" class="tm-btn tm-btn-secondary tm-btn-pad-big">Send</button>
+                            <p class="u-text u-text-2">Send us an e-mail</p><span class="u-icon u-icon-circle u-text-palette-1-light-1 u-icon-1" data-href="mailto:clement.fauregignoux@gmail.com?subject=%5BIWantToKnowMore%5DFirst%20contact"><
                     </div>
                 </form>
             </div>
