--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ http://www.tooplate.com/view/2110-character
                         <textarea rows="5" id="contact_message" name="contact_message" class="form-control" placeholder="Message" required></textarea>
                     </div>
                     <div class="tm-text-right">
-                        <button type="submit" class="tm-btn tm-btn-secondary tm-btn-pad-big">Send</button>
+                        <button type="submit" class="tm-btn tm-btn-secondary tm-btn-pad-big" data-href="mailto:clement.fauregignoux@gmail.com?subject=%5BIWantToKnowMore%5DFirst%20contact">Send</button>
                             <p class="u-text u-text-2">Send us an e-mail</p><span class="u-icon u-icon-circle u-text-palette-1-light-1 u-icon-1" data-href="mailto:clement.fauregignoux@gmail.com?subject=%5BIWantToKnowMore%5DFirst%20contact"><
                     </div>
                 </form>
@@ -102,7 +102,7 @@ http://www.tooplate.com/view/2110-character
                     <header>
                         <h2>header en bas</h2>
                     </header>
-                    <p>La fin.</p>
+                    <p>La fin2.</p>
                 </div>
             </div>
         </div>
